--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
@@ -11,8 +11,10 @@
       i18n="Title of panel to select conditions to filter products by">Filter Products...</mat-panel-title>
   </mat-expansion-panel-header>
   <fieldset [formGroup]="formGroup">
+    <input formControlName="categoryCode" type="hidden" />
+
     <app-product-category-selector-field
-      formControlName="category"
+      (select)="onSelectCategory($event)"
       placeholder="By Category"
       i18n-placeholder="Name of field for filtering products by selected category">
     </app-product-category-selector-field>
