--- a/src/app/store/forms/checkout-request/store-checkout-request-form.component.html
+++ b/src/app/store/forms/checkout-request/store-checkout-request-form.component.html
@@ -18,8 +18,8 @@
   </div>
   <div class="shipping">
     <h3 i18n="Title of form for shipping information">Shipping Details</h3>
-    <app-store-shipping-form formControlName="shipping">
-    </app-store-shipping-form>
+    <app-store-shipping-details-form formControlName="shipping">
+    </app-store-shipping-details-form>
   </div>
   <div class="actions">
     <button type="submit" class="request"
