--- a/src/app/management/components/data-actions-button-bar/management-data-actions-button-bar.component.html
+++ b/src/app/management/components/data-actions-button-bar/management-data-actions-button-bar.component.html
@@ -9,3 +9,7 @@
   color="primary"
   (click)="onClickAdd()"
   i18n="create new item|Label for action button to create an item">Create</button>
+<button mat-button mat-raised-button
+  color="primary"
+  (click)="onClickDelete()"
+  i18n="delete item|Label for action button to delete an item">Delete</button>
