fix: remove unintended character

--- a/src/app/management/routes/product-categories/management-product-categories.component.html
+++ b/src/app/management/routes/product-categories/management-product-categories.component.html
@@ -18,6 +18,6 @@
   </div>
   <app-management-data-actions-button-bar
     *ngIf="canAdd$ | async"
-    (add)="onClickAdd()">-
+    (add)="onClickAdd()">
   </app-management-data-actions-button-bar>
 </div>
