refactor: usage of authorized-access data

--- a/src/app/management/components/data-actions-button-bar/management-data-actions-button-bar.component.html
+++ b/src/app/management/components/data-actions-button-bar/management-data-actions-button-bar.component.html
@@ -6,12 +6,7 @@
 -->
 
 <button mat-button mat-raised-button
-  *ngIf="showAdd"
+  *ngIf="showCreate"
   color="primary"
-  (click)="onClickAdd()"
+  (click)="onClickCreate()"
   i18n="create new item|Label for action button to create an item">Create</button>
-<button mat-button mat-raised-button
-  *ngIf="showDelete"
-  color="primary"
-  (click)="onClickDelete()"
-  i18n="delete item|Label for action button to delete an item">Delete</button>
