--- a/src/app/management/routes/product-lists/management-product-lists.component.html
+++ b/src/app/management/routes/product-lists/management-product-lists.component.html
@@ -36,7 +36,7 @@
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let productList">
           <button mat-button mat-icon-button type="button"
-            *ngIf="canEdit$ | async"
+            *ngIf="canUpdate$ | async"
             color="primary"
             aria-label="View contents"
             i18n-aria-label="view contents of list|Label for action button to view contents of a list"
@@ -45,7 +45,7 @@
             <mat-icon>list</mat-icon>
           </button>
           <button mat-button mat-icon-button type="button"
-            *ngIf="canEdit$ | async"
+            *ngIf="canUpdate$ | async"
             color="primary"
             aria-label="Edit"
             i18n-aria-label="edit|Label for action button to edit information of an item"
@@ -73,8 +73,8 @@
   <div>
 
     <app-management-data-actions-button-bar
-      *ngIf="canAdd$ | async"
-      (add)="onClickAdd()">
+      [actions]="actions$ | async"
+      (create)="onClickCreate()">
     </app-management-data-actions-button-bar>
     <mat-paginator
       (page)="onPage($event)"
