--- a/src/app/management/routes/sales/management-sales.component.html
+++ b/src/app/management/routes/sales/management-sales.component.html
@@ -43,7 +43,7 @@
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let row">
           <button mat-button mat-icon-button type="button"
-            *ngIf="canEdit$ | async"
+            *ngIf="canUpdate$ | async"
             aria-label="View details"
             i18n-aria-label="view details|Label for action button to view and manage details of a complex item"
             [disabled]="busy$ | async"
@@ -51,7 +51,7 @@
             <mat-icon class="material-icons-outlined">info</mat-icon>
           </button>
           <button mat-button mat-icon-button type="button"
-            *ngIf="canEdit$ | async"
+            *ngIf="canUpdate$ | async"
             color="primary"
             aria-label="Edit"
             i18n-aria-label="edit|Label for action button to edit information of an item"
@@ -80,8 +80,8 @@
   <div>
 
     <app-management-data-actions-button-bar
-      *ngIf="canAdd$ | async"
-      (add)="onClickAdd()">
+      [actions]="actions$ | async"
+      (create)="onClickCreate()">
     </app-management-data-actions-button-bar>
     <mat-paginator
       (page)="onPage($event)"
