--- a/src/app/management/routes/users/management-users.component.html
+++ b/src/app/management/routes/users/management-users.component.html
@@ -29,7 +29,7 @@
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let user">
           <button mat-button mat-icon-button type="button"
-            *ngIf="canEdit$ | async"
+            *ngIf="canUpdate$ | async"
             color="primary"
             aria-label="Edit"
             i18n-aria-label="edit|Label for action button to edit information of an item"
@@ -57,8 +57,8 @@
   <div>
 
     <app-management-data-actions-button-bar
-      *ngIf="canAdd$ | async"
-      (add)="onClickAdd()">
+      [actions]="actions$ | async"
+      (create)="onClickCreate()">
     </app-management-data-actions-button-bar>
     <mat-paginator
       (page)="onPage($event)"
