test: improve coverage for slideshow
rename its `autocycle` property to `automaticSlide`

--- a/src/app/management/forms/product/product-form.component.html
+++ b/src/app/management/forms/product/product-form.component.html
@@ -8,7 +8,7 @@
 <fieldset [formGroup]="formGroup">
   <app-slideshow class="images"
     formControlName="images"
-    [autocycle]="false"
+    [automaticSlide]="false"
     [editable]="true"
     (add)="onClickAddImage()">
   </app-slideshow>
