--- a/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
+++ b/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
@@ -7,7 +7,7 @@
 
 <app-slideshow
   [images]="data.product.images"
-  [autocycle]="false">
+  [automaticSlide]="false">
 </app-slideshow>
 <div class="about">
   <h2 mat-dialog-title class="name">{{ data.product.name }}</h2>
