--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -13,7 +13,7 @@
       <img [src]="product.images[0].url" [alt]="product.name" />
     </ng-container>
     <ng-template #noImageAvailable>
-      <img src="assets/img/unavailable.png"
+      <img [src]="stockImageUrl"
         alt="Unavailable image"
         i18n-alt="Label to describe a missing or unavailable image" />
     </ng-template>
