fix: nested profile form validation @ register

--- a/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
+++ b/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
@@ -28,7 +28,7 @@
         i18n-placeholder="Name of field for password confirmation by repetition" />
     </mat-form-field>
 
-    <app-person-form formGroupName="person">
+    <app-person-form formControlName="person">
     </app-person-form>
 
     <div class="actions">
