test: improve coverage for checkout button

--- a/src/app/store/components/checkout-button/store-checkout-button.component.html
+++ b/src/app/store/components/checkout-button/store-checkout-button.component.html
@@ -6,7 +6,7 @@
 -->
 
 <form #form method="post" [action]="checkoutDetails.url">
-  <input type="hidden" name="token_ws" [value]="checkoutDetails.token" />
+  <input type="hidden" [name]="innerControlName" [value]="checkoutDetails.token" />
   <button type="submit" class="checkout"
     mat-button mat-raised-button
     color="accent"
