--- a/src/app/store/components/footer/store-footer.component.html
+++ b/src/app/store/components/footer/store-footer.component.html
@@ -6,7 +6,7 @@
 -->
 
 <div class="upper">
-  <div class="whatsapp sales contact"
+  <div class="whatsapp orders contact"
     *ngIf="whatsappNumber">
     <strong i18n="Label for section referring to a contact WhatsApp number">WhatsApp</strong><br/>
     <a href="https://wa.me/{{ whatsappUrlSafeNumber }}">
