--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -5,10 +5,10 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title i18n="Title of dialog prompt to add products into details of a sell">Add Products</h2>
+<h2 mat-dialog-title i18n="Title of dialog prompt to add products into details of a order">Add Products</h2>
 <div class="main">
   <div class="available">
-    <h3 i18n="Title of widget displaying available products for addition to details of a sell">Available Products</h3>
+    <h3 i18n="Title of widget displaying available products for addition to details of a order">Available Products</h3>
     <app-product-filters-panel (filtersChanges)="onFiltersChange($event)">
     </app-product-filters-panel>
     <app-centered-mat-spinner *ngIf="loading$ | async">
@@ -42,7 +42,7 @@
             <button mat-button mat-icon-button type="button"
               color="primary"
               aria-label="Add this product"
-              i18n-aria-label="add this product|Label for action button to mark a product for addition to details of a sell"
+              i18n-aria-label="add this product|Label for action button to mark a product for addition to details of a order"
               (click)="onClickIncludeProductIntoSelection(product)">
               <mat-icon>add</mat-icon>
             </button>
@@ -64,7 +64,7 @@
   </div>
   <mat-divider vertical></mat-divider>
   <div class="selected">
-    <h3 i18n="Title of widget displaying products marked for addition to details of a sell">Selected Products</h3>
+    <h3 i18n="Title of widget displaying products marked for addition to details of a order">Selected Products</h3>
     <div class="product-table-wrapper">
       <table mat-table #selectedProductsTable [dataSource]="selectedProducts">
         <ng-container matColumnDef="name">
@@ -94,7 +94,7 @@
             <button mat-button mat-icon-button type="button"
               color="warn"
               aria-label="Don't add this product"
-              i18n-aria-label="dont add this product|Label for action button to unmark a product for addition details of a sell"
+              i18n-aria-label="dont add this product|Label for action button to unmark a product for addition details of a order"
               (click)="onClickDropFromSelection(i)">
               <mat-icon>remove</mat-icon>
             </button>
