--- a/src/app/management/routes/orders/management-orders.component.html
+++ b/src/app/management/routes/orders/management-orders.component.html
@@ -13,14 +13,14 @@
     <table mat-table [dataSource]="items$" matSort (matSortChange)="onSortChange($event)">
       <ng-container matColumnDef="buyOrder">
         <th mat-header-cell *matHeaderCellDef mat-sort-header
-          i18n="Name of table header for buy order of sell">Buy order no.</th>
+          i18n="Name of table header for buy order of order">Buy order no.</th>
         <td mat-cell *matCellDef="let row">
           {{ row.item.buyOrder }}
         </td>
       </ng-container>
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header
-          i18n="Name of table header for date and time of sell">Date and time</th>
+          i18n="Name of table header for date and time of order">Date and time</th>
         <td mat-cell *matCellDef="let row">
           {{ row.item.date | date:'short' }}
         </td>
@@ -34,7 +34,7 @@
       </ng-container>
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header
-          i18n="transaction status|Name of table header for status of sell">Status</th>
+          i18n="transaction status|Name of table header for status of order">Status</th>
         <td mat-cell *matCellDef="let row">
           {{ row.item.status }}
         </td>
