--- a/src/app/shared/components/order-details-table/order-details-table.component.html
+++ b/src/app/shared/components/order-details-table/order-details-table.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<table mat-table [dataSource]="sellDetails$">
+<table mat-table [dataSource]="orderDetails$">
   <ng-container matColumnDef="product">
     <th mat-header-cell *matHeaderCellDef>
       <span i18n="product|Name of table header for name and code of product">Product</span>
@@ -33,11 +33,11 @@
     <th mat-header-cell *matHeaderCellDef
       i18n="Name of table header for product units in cart">Units</th>
     <td mat-cell *matCellDef="let detail; let i = index">
-      <app-sell-detail-units-control *ngIf="editable; else showUnits"
+      <app-order-detail-units-control *ngIf="editable; else showUnits"
         [units]="detail.units"
         (increase)="onClickIncreaseProductQuantity(i)"
         (decrease)="onClickDecreaseProductQuantity(i)">
-      </app-sell-detail-units-control>
+      </app-order-detail-units-control>
       <ng-template #showUnits>{{ detail.units }}</ng-template>
     </td>
   </ng-container>
