--- a/src/app/shared/components/order-information/order-information.component.html
+++ b/src/app/shared/components/order-information/order-information.component.html
@@ -6,12 +6,12 @@
 -->
 
 <div class="customer">
-  <ng-container *ngIf="sell.customer; else noCustomer">
+  <ng-container *ngIf="order.customer; else noCustomer">
     <mat-icon>person</mat-icon>
     <span class="details">
-      <span class="name">{{ sell.customer.firstName + " " + sell.customer.lastName }}</span>
-      <b class="idCard">RUT {{ sell.customer.idNumber }}</b>
-      <i class="email">{{ sell.customer.email }}</i>
+      <span class="name">{{ order.customer.firstName + " " + order.customer.lastName }}</span>
+      <b class="idCard">RUT {{ order.customer.idNumber }}</b>
+      <i class="email">{{ order.customer.email }}</i>
     </span>
   </ng-container>
   <ng-template #noCustomer>
@@ -22,35 +22,35 @@
   </ng-template>
 </div>
 <div class="type">
-  <ng-container *ngIf="sell.token; else justStateReceiptType">
-    <a href="/store/receipt?token={{ sell.token }}"
+  <ng-container *ngIf="order.token; else justStateReceiptType">
+    <a href="/store/receipt?token={{ order.token }}"
       mat-button mat-raised-button
       target="_blank">
       <mat-icon>receipt</mat-icon>
-      <span i18n="Label for action to review the receipt details of a sell">View receipt</span>
+      <span i18n="Label for action to review the receipt details of an order">View receipt</span>
     </a>
   </ng-container>
   <ng-template #justStateReceiptType>
     <mat-icon>receipt</mat-icon>
-    <span>{{ sell.billingType  }}</span>
+    <span>{{ order.billingType  }}</span>
   </ng-template>
 </div>
-<div class="company" *ngIf="sell.billingCompany">
+<div class="company" *ngIf="order.billingCompany">
   <mat-icon>business</mat-icon>
   <span class="details">
-    <span class="name">{{ sell.billingCompany.name }}</span>
-    <b class="idNumber">RUT {{ sell.billingCompany.idNumber }}</b>
+    <span class="name">{{ order.billingCompany.name }}</span>
+    <b class="idNumber">RUT {{ order.billingCompany.idNumber }}</b>
   </span>
 </div>
 <div class="date">
   <mat-icon>schedule</mat-icon>
-  <span>{{ sell.date | date:'dd/MM/y, hh:mm aa' }}</span>
+  <span>{{ order.date | date:'dd/MM/y, hh:mm aa' }}</span>
 </div>
 <div class="status">
   <mat-icon>pending_actions</mat-icon>
-  <span>{{ sell.status }}</span>
+  <span>{{ order.status }}</span>
 </div>
-<div class="shipping" *ngIf="sell.shippingAddress">
+<div class="shipping" *ngIf="order.shippingAddress">
   <mat-icon>local_shipping</mat-icon>
-  <span>{{ sell.shippingAddress | address }}</span>
+  <span>{{ order.shippingAddress | address }}</span>
 </div>
